<resources>
    <string name="app_name">Anno1800 Influence Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_player_name">Player Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="save">Save</string>
    <string name="select_players">Select players</string>
    <string name="save_points_instructions">Tap on each player to insert points</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="done">DONE</string>
    <string name="next">Next</string>
    <string name="label_three_points_card_number"># of 3 points cards:</string>
    <string name="label_five_points_card_number"># of 5 points cards:</string>
    <string name="label_eight_points_card_number"># of 8 points cards:</string>
    <string name="label_expedition_points">Expedition points:</string>
    <string name="label_fireworks_points">Fireworks points:</string>
    <string name="label_money_points">Money points:</string>
    <string name="label_first_obj_points">First objective points:</string>
    <string name="label_second_obj_points">Second objective points:</string>
    <string name="label_third_obj_points">Third objective points:</string>
    <string name="label_fourth_obj_points">Fourth objective points:</string>
    <string name="label_fifth_obj_points">Fifth objective points:</string>
    <string name="date">Date: %1$s</string>
    <string name="number_of_players">Number of players: %1$d</string>
    <string name="winner">Winner: %1$s</string>
    <string name="username">Username %1$s:</string>
    <string name="games_list">Games List</string>
    <string name="label_composite_points_cards">%1$s Points Cards</string>
    <string name="label_three">Three</string>
    <string name="label_five">Five</string>
    <string name="label_eight">Eight</string>
</resources>