<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/threePointsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/threePointsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_three_points_card_number"
            android:inputType="number"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fivePointsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fivePointsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_five_points_card_number"
            android:inputType="number"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eightPointsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:layout_constraintTop_toBottomOf="@+id/threePointsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eightPointsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_eight_points_card_number"
            android:inputType="number"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expeditionPointsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:layout_constraintTop_toBottomOf="@+id/fivePointsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expeditionePointsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_expedition_points"
            android:inputType="number"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fireworksPointsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:layout_constraintTop_toBottomOf="@+id/eightPointsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fireworksPointsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_fireworks_points"
            android:inputType="number"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/moneyPointsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        app:layout_constraintTop_toBottomOf="@+id/expeditionPointsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/moneyPointsET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_money_points"
            android:inputType="number"
            android:singleLine="true"
            android:text="0"
            android:textColor="@color/dark_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fireworksPointsContainer"
        android:text="@string/done" />

</androidx.constraintlayout.widget.ConstraintLayout>